Added product pages

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 <h1>Pyxis International</h1>
 <p>Welcome to Pyxis International!</p>
 
+<p><b>Our Products</b></p>
+
+<ul>
+  <li><a href="aviate.html">Aviate</a> - Flight Planning Software</li>
+  <li><a href="balancia.html">Balancia</a> - Weight & Balance Tool</li>
+</ul>
 </body>
 </html>
